05-Terraform-Loops-MetaArguments-SplatOperator/05-01-Terraform-Loops-MetaArguments-SplatOperator/terraform-manifests/c3-ec2securitygroups.tf
# create Security Gruop -SSH Traffic
resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh"
  description = "DEV VPC SSH"
  #vpc_id      = aws_vpc.main.id

  ingress {
    description      = "allow port 22"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
 
  }

  egress {
    description = "Allow all ip and ports outbound"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
   
  }

  tags = {
    Name = "vpc ssh"
  }
}

# Create security group  Web traffic
resource "aws_security_group" "vpc-web" {
  name        = "vpc-web"
  description = "DEV VPC WEB"
  #vpc_id      = aws_vpc.main.id

  ingress {
    description      = "allow port 80"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
 
  }
ingress {
    description      = "allow port 443"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]

}

  egress {
    description = "Allow all ip and ports outbound"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
   
  }

  tags = {
    Name = "vpc web"
  }
}
